--- a/src/Projects/Project.scss
+++ b/src/Projects/Project.scss
@@ -25,6 +25,14 @@
        font-size: 1.2rem;      
     }
 }
+.slide{
+  visibility: hidden;
+  display: none;
+  @media screen and (max-width: 900px) {  
+   visibility: visible;  
+   display: inline; 
+}
+}
 
 .each-slide-effect > div {
    display: flex;
@@ -32,6 +40,7 @@
    justify-content: center;
    background-size: cover;
    height: 100;
+   // visibility: hidden;
  }
  
  .each-slide-effect span {
@@ -39,5 +48,36 @@
    font-size: 20px;
    background: #efefef;
    text-align: center;
+   height: 100%;
+ }
+ .project-content{
+   width:100%;
+   background-color: aqua;
+   display: grid;
+   grid-template-columns: auto auto auto;
+   @media screen and (max-width: 900px) {  
+      visibility: hidden;   
+   }
+ }
+
+ .select{
+   -webkit-transition: all 1s ease;
+   -moz-transition: all 1s ease;
+   -o-transition: all 1s ease;
+   transition: all 1s ease;
+  
+ }
+ .select:hover{
+   
+      transform: scaleX(2);
+      -webkit-transform: scaleX(2);
+      -ms-transform: scaleX(2);
+      -o-transform: scaleX(2);
+      transform: scaleX(2);
+      -webkit-box-shadow: 3px 3px 5px #000;
+      -moz-box-shadow: 3px 3px 5px #000;
+      box-shadow: 3px 3px 5px #000;
+    
+  
  }
 
