--- a/src/Projects/Project.scss
+++ b/src/Projects/Project.scss
@@ -46,37 +46,35 @@
  .each-slide-effect span {
    padding: 20px;
    font-size: 20px;
-   background: #efefef;
+   background-color: #efefef;
+   background-size: cover;
    text-align: center;
    height: 100%;
+
  }
  .project-content{
    width:100%;
-   background-color: aqua;
+   height: 86%;
+  //  background-color: aqua;
    display: grid;
    grid-template-columns: auto auto auto;
    @media screen and (max-width: 900px) {  
-      visibility: hidden;   
+    display: flex;
+    flex-direction: row;  
    }
  }
 
  .select{
-   -webkit-transition: all 1s ease;
-   -moz-transition: all 1s ease;
-   -o-transition: all 1s ease;
-   transition: all 1s ease;
+  position: relative;
+  overflow: hidden;
+  transition: 0.35s;
+  clip-path:inset(0 0%);
   
  }
+ 
  .select:hover{
    
-      transform: scaleX(2);
-      -webkit-transform: scaleX(2);
-      -ms-transform: scaleX(2);
-      -o-transform: scaleX(2);
-      transform: scaleX(2);
-      -webkit-box-shadow: 3px 3px 5px #000;
-      -moz-box-shadow: 3px 3px 5px #000;
-      box-shadow: 3px 3px 5px #000;
+  clip-path:inset(10% 10%);
     
   
  }
