--- a/src/Projects/Project.scss
+++ b/src/Projects/Project.scss
@@ -1,9 +1,9 @@
  .project{
    width:100%;
-   height: 100%;
+ 
    position: relative;
 
-   height: 100vh;
+ 
  }
  .heading{
    padding: 20px;
@@ -52,15 +52,32 @@
    height: 100%;
 
  }
+ .project-content img {
+  height:500px;
+  width:30vw;
+  
+  
+  @media screen and (max-width: 900px) {  
+    height:500px;
+    width:50vw;
+   }
+   @media screen and (max-width: 400px) {  
+    height:300px;
+    width:100vw;
+   }
+ }
+
  .project-content{
    width:100%;
-   height: 86%;
-  //  background-color: aqua;
    display: grid;
+   row-gap: 25px;
    grid-template-columns: auto auto auto;
    @media screen and (max-width: 900px) {  
-    display: flex;
-    flex-direction: row;  
+    grid-template-columns: auto auto ;
+    column-gap: 25px;
+   }
+   @media screen and (max-width: 400px) {  
+    grid-template-columns: auto  ;
    }
  }
 
@@ -69,6 +86,8 @@
   overflow: hidden;
   transition: 0.35s;
   clip-path:inset(0 0%);
+  background-repeat:repeat;
+  background-size: contain;
   
  }
  
