--- a/src/main/about/about.scss
+++ b/src/main/about/about.scss
@@ -58,7 +58,7 @@
     // font-family: 'Courier New', Courier, ;
     font-family: serif;
     @media screen and (max-width: 900px) {  
-        font-size: 1rem;   
+        font-size: small;   
        
      }
 }
