--- a/src/main/comments/comment.scss
+++ b/src/main/comments/comment.scss
@@ -21,7 +21,7 @@
   padding-bottom:10px ;
   color: white;
   @media screen and (max-width: 900px) {  
-      font-size: 1.2rem;      
+      font-size: 1rem;      
    }
 }
 .each-slide-effect{
@@ -52,6 +52,9 @@
    .each-slide-effect h1{
     color:white;
     padding: 10px;
+    @media screen and (max-width: 900px) {  
+      font-size: large;    
+   }
    }
   
    .each-slide-effect .slide-image{
@@ -65,6 +68,9 @@
     word-wrap:break-word;
     padding: 20px;
     color: white;
+    @media screen and (max-width: 900px) {  
+      font-size: small;    
+   }
     
    }
    
